fixed header spacing between items

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,12 @@
 /* styles.css */
 * {
     margin:0;
+    box-sizing: border-box
 }
 
-ul {
+.nav-links ul {
+    display: flex;
+    gap: 20px;
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -12,9 +15,13 @@ li {
     display: inline;
 }
 .nav-bar {
-    background-color: #1F2937;
     color: white;
-    display: inline;
+    width: 100%;
+    height: 50px;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 40px
 }
 .first-section {
     margin: 0;
